FF Fix: fullwidth images in posts
Images were stretched vertically, fixed with 100% width on img tags.

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1501,6 +1501,8 @@ body.single-post article section {
 body.single-post article section.image {
   width: calc(100% + 6.25rem);
   margin-left: -6.25rem; }
+  body.single-post article section.image img {
+    width: 100%; }
 body.single-post article section.text {
   margin-bottom: 50px; }
   body.single-post article section.text .section-body {
